--- a/email-inlined.html
+++ b/email-inlined.html
@@ -85,7 +85,11 @@
                     <tr>
                       <td style="font-family:sans-serif;font-size:14px;vertical-align:top;">
                         <p style="font-family:sans-serif;font-size:14px;font-weight:normal;margin:0;Margin-bottom:15px;">Hi there,</p>
-                        <p style="font-family:sans-serif;font-size:14px;font-weight:normal;margin:0;Margin-bottom:15px;">Sometimes you just want to send a simple HTML email with a simple design and clear call to action. This is it.</p>
+                        <p style="font-family:sans-serif;font-size:14px;font-weight:normal;margin:0;Margin-bottom:15px;text-align:center;text-decoration: underline;">That feeling when you receive a wrong sample?</p>
+                        <div style="text-align: center;"><img class="block-image" src="https://uploads.intercomcdn.com/i/o/20334990/bec22c5b3f1df34c730dfcef/sad-gift.gif"></div><br>
+                        <p style="font-family:sans-serif;font-size:14px;font-weight:normal;margin:0;Margin-bottom:15px;">Did you know that more than 50% of the time and money gets wasted due to in-efficiencies in product development? We have developed Techpacker so you can speed up your product-development by 50% and get accurate samples. <br><br>So while you try Techpacker for next 7 days, I've just two simple questions for you to ensure that you get the best results : </p>
+                        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdn2_HuXrfOK_O2zbHuFYYfF4q4D-QmZVf7jhqlshINQrRNOA/viewform?embedded=true" width="760" height="1000" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+                        <p style="font-family:sans-serif;font-size:14px;font-weight:normal;margin:0;Margin-bottom:15px;">To your success</p>
                         <table border="0" cellpadding="0" cellspacing="0" class="btn btn-primary" style="border-collapse:separate;mso-table-lspace:0pt;mso-table-rspace:0pt;box-sizing:border-box;width:100%;">
                           <tbody>
                             <tr>
@@ -101,8 +105,6 @@
                             </tr>
                           </tbody>
                         </table>
-                        <p style="font-family:sans-serif;font-size:14px;font-weight:normal;margin:0;Margin-bottom:15px;">This is a really simple email template. Its sole purpose is to get the recipient to click the button with no distractions.</p>
-                        <p style="font-family:sans-serif;font-size:14px;font-weight:normal;margin:0;Margin-bottom:15px;">Good luck! Hope it works.</p>
                       </td>
                     </tr>
                   </table>
