--- a/email-inlined.html
+++ b/email-inlined.html
@@ -88,23 +88,8 @@
                         <p style="font-family:sans-serif;font-size:14px;font-weight:normal;margin:0;Margin-bottom:15px;text-align:center;text-decoration: underline;">That feeling when you receive a wrong sample?</p>
                         <div style="text-align: center;"><img class="block-image" src="https://uploads.intercomcdn.com/i/o/20334990/bec22c5b3f1df34c730dfcef/sad-gift.gif"></div><br>
                         <p style="font-family:sans-serif;font-size:14px;font-weight:normal;margin:0;Margin-bottom:15px;">Did you know that more than 50% of the time and money gets wasted due to in-efficiencies in product development? We have developed Techpacker so you can speed up your product-development by 50% and get accurate samples. <br><br>So while you try Techpacker for next 7 days, I've just two simple questions for you to ensure that you get the best results : </p>
-                        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdn2_HuXrfOK_O2zbHuFYYfF4q4D-QmZVf7jhqlshINQrRNOA/viewform?embedded=true" width="760" height="1000" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
-                        <p style="font-family:sans-serif;font-size:14px;font-weight:normal;margin:0;Margin-bottom:15px;">To your success</p>
-                        <table border="0" cellpadding="0" cellspacing="0" class="btn btn-primary" style="border-collapse:separate;mso-table-lspace:0pt;mso-table-rspace:0pt;box-sizing:border-box;width:100%;">
-                          <tbody>
-                            <tr>
-                              <td align="left" style="font-family:sans-serif;font-size:14px;vertical-align:top;padding-bottom:15px;">
-                                <table border="0" cellpadding="0" cellspacing="0" style="border-collapse:separate;mso-table-lspace:0pt;mso-table-rspace:0pt;width:100%;width:auto;">
-                                  <tbody>
-                                    <tr>
-                                      <td style="font-family:sans-serif;font-size:14px;vertical-align:top;background-color:#ffffff;border-radius:5px;text-align:center;background-color:#3498db;"> <a href="http://htmlemail.io" target="_blank" style="text-decoration:underline;background-color:#ffffff;border:solid 1px #3498db;border-radius:5px;box-sizing:border-box;color:#3498db;cursor:pointer;display:inline-block;font-size:14px;font-weight:bold;margin:0;padding:12px 25px;text-decoration:none;text-transform:capitalize;background-color:#3498db;border-color:#3498db;color:#ffffff;">Call To Action</a> </td>
-                                    </tr>
-                                  </tbody>
-                                </table>
-                              </td>
-                            </tr>
-                          </tbody>
-                        </table>
+                        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdn2_HuXrfOK_O2zbHuFYYfF4q4D-QmZVf7jhqlshINQrRNOA/viewform?embedded=true" width="760" height="1300" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+                        <p style="font-family:sans-serif;font-size:14px;font-weight:normal;margin:0;Margin-bottom:15px;">To your success,<br>Liang</p>
                       </td>
                     </tr>
                   </table>
@@ -112,24 +97,6 @@
               </tr>
               <!-- END MAIN CONTENT AREA -->
             </table>
-            <!-- START FOOTER -->
-            <div class="footer" style="clear:both;padding-top:10px;text-align:center;width:100%;">
-              <table border="0" cellpadding="0" cellspacing="0" style="border-collapse:separate;mso-table-lspace:0pt;mso-table-rspace:0pt;width:100%;">
-                <tr>
-                  <td class="content-block" style="font-family:sans-serif;font-size:14px;vertical-align:top;color:#999999;font-size:12px;text-align:center;">
-                    <span class="apple-link" style="color:#999999;font-size:12px;text-align:center;">Company Inc, 3 Abbey Road, San Francisco CA 94102</span>
-                    <br>
-                     Don't like these emails? <a href="http://i.imgur.com/CScmqnj.gif" style="color:#3498db;text-decoration:underline;color:#999999;font-size:12px;text-align:center;">Unsubscribe</a>.
-                  </td>
-                </tr>
-                <tr>
-                  <td class="content-block powered-by" style="font-family:sans-serif;font-size:14px;vertical-align:top;color:#999999;font-size:12px;text-align:center;">
-                    Powered by <a href="http://htmlemail.io" style="color:#3498db;text-decoration:underline;color:#999999;font-size:12px;text-align:center;text-decoration:none;">HTMLemail</a>.
-                  </td>
-                </tr>
-              </table>
-            </div>
-            <!-- END FOOTER -->
             <!-- END CENTERED WHITE CONTAINER -->
           </div>
         </td>
